--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,17 @@
-p, a{
+html {
+  font-size: 62.5%;
+}
+:root {
+  --primary-color: #086799;
+  --black: #222;
+  --secondary-color: #46c0d2;
+}
+p,
+a {
   font-weight: 500;
+}
+.wrapper {
+  position: relative;
 }
 .sidebar-wrapper ul li a {
   padding: 6px 10px;
@@ -8,15 +20,148 @@ p, a{
   background: rgba(180, 202, 223, 0.3);
   border-radius: 4px;
 }
-.main-panel{
-  background-color: #EFF7FF;
+.main-panel {
+  background-color: #eff7ff;
 }
 
-.sidebar{
-  background: #FFFFFF;
-box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.05);
+.sidebar {
+  background: #ffffff;
+  box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.05);
 }
-.sidebar .nav li .dropdown-menu a, .sidebar .nav li a{
+.sidebar .nav li .dropdown-menu a,
+.sidebar .nav li a {
   margin: 10px 0;
   overflow: hidden;
+}
+.navbar__title {
+  font-size: 1.8rem;
+  padding-left: 1rem;
+  color: var(--primary-color);
+  font-weight: bold;
+  line-height: 2.6rem;
+}
+.navbar__title span {
+  color: var(--black);
+}
+
+.nav-item__name {
+  font-size: 1.3rem;
+  padding: 0 1.5rem;
+  font-weight: bold;
+  line-height: 1.9rem;
+  color: var(--primary-color);
+}
+
+.nav-item__avatar {
+  border-radius: 50%;
+  width: 3.2rem;
+  height: 3.2rem;
+  display: block;
+}
+.nav-item__avatar img {
+  max-width: 100%;
+  border-radius: 50%;
+}
+.material-icons {
+  font-size: 1.33rem !important;
+}
+.btn-custom {
+  height: 4.5rem;
+  color: #fff;
+  min-width: 14rem;
+}
+.btn-custom--primary__color {
+  background-color: var(--primary-color);
+}
+.btn-custom--secodary__color {
+  background-color: var(--secondary-color);
+}
+.btn-custom .material-icons {
+  font-size: 1.7rem !important;
+}
+.btn-custom img {
+  width: 1.7rem;
+  height: 1.7rem;
+}
+.content__table {
+  height: 54rem;
+}
+.card--transparent {
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+.form-check-sign {
+  top: 0 !important;
+}
+.td__content .form-check-label {
+  color: var(--primary-color);
+}
+.td__content {
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: #2d4761;
+  text-align: center;
+}
+.td__content .material-icons {
+  font-size: 2rem !important;
+  color: #93a5b6;
+}
+tr {
+  background-color: white !important;
+}
+thead tr {
+  background-color: var(--primary-color) !important;
+  color: #fff;
+  border-radius: 50%;
+}
+.pagination li a {
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid #d9e7f4;
+  font-size: 1.4rem;
+  color: var(--primary-color);
+}
+
+.pagination li.active {
+  background-color: var(--primary-color);
+  color: white;
+  /* border: 1px solid var(--primary-color); */
+}
+.pagination li.active a {
+  color: #fff;
+}
+.pagination a:hover:not(.active) {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.pagination li:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.pagination li:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.btn__upload {
+  position: absolute;
+  right: 2rem;
+  bottom: 2rem;
+  width: 8rem;
+  height: 8rem;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn__upload-image {
+  width: 3rem;
+  height: 3rem;
+}
+.btn__upload-image img {
+  max-width: 100%;
 }
