--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -145,10 +145,13 @@ thead tr {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
+
 .btn__upload {
   position: absolute;
   right: 2rem;
   bottom: 2rem;
+}
+.btn__aminate {
   width: 8rem;
   height: 8rem;
   border-radius: 50%;
@@ -158,11 +161,11 @@ thead tr {
   justify-content: center;
   align-items: center;
 }
-.btn__upload-image {
+.btn__aminate-image {
   width: 3rem;
   height: 3rem;
 }
-.btn__upload-image img {
+.btn__aminate-image img {
   max-width: 100%;
 }
 .upload__content {
@@ -218,4 +221,46 @@ thead tr {
   color: var(--primary-color);
   font-weight: bold;
   margin-bottom: 1.6rem;
+}
+.col-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+}
+.btn__aminate--color {
+  background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  margin-top: 2.5rem;
+}
+.content__preview {
+  padding-bottom: 4.6rem;
+}
+.footer-preview {
+  background-color: #e2f0ff;
+  padding: 1rem 1.5rem;
+}
+.preview__text {
+  margin-left: -2rem;
+}
+.preview__text span {
+  display: block;
+  margin-top: 1rem;
+  font-size: 1.3rem;
+}
+.preview__text span:first-child {
+  color: var(--primary-color);
+  font-weight: bold;
+}
+.btn__aminate--transparent {
+  background-color: transparent;
+  border-color: var(--primary-color);
+  color: var(--primary-color);
+  width: 4.8rem;
+  height: 4.8rem;
+  border: 2px solid var(--primary-color);
+}
+.btn__aminate-image--custom {
+  width: 1.5rem;
 }
