--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,7 +6,10 @@ html {
   --black: #222;
   --secondary-color: #46c0d2;
 }
-
+li {
+  text-decoration: none;
+  list-style: none;
+}
 p,
 a {
   font-weight: 500;
@@ -305,4 +308,46 @@ thead tr {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+}
+.card-around {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  padding: 6rem 0;
+}
+.round-view {
+  padding-top: 8rem;
+  padding-bottom: 6rem;
+}
+.round__btn--center {
+  border-radius: 50%;
+  height: 12rem;
+  width: 12rem;
+  border: 3px solid #46c0d2;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #46c0d2;
+  font-size: 1.4rem;
+  transition: 0.3s ease all;
+}
+.round__btn--center:hover {
+  background-color: var(--primary-color) !important;
+  color: #fff !important;
+  border-color: var(--primary-color);
+}
+.pl-1rem {
+  padding-left: 2.5rem;
+}
+.btn-custom--large {
+  width: 25rem;
+  height: 8rem;
+  font-size: 1.8rem;
+  line-height: 2.6rem;
+}
+.btn-custom--large img {
+  width: 2.6rem;
+  height: 2.6rem;
 }
