--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -26,6 +26,7 @@ a {
 }
 .main-panel {
   background-color: #eff7ff;
+  overflow-x: hidden;
 }
 
 .btn:hover {
@@ -77,7 +78,10 @@ a {
 .btn-custom {
   height: 4.5rem;
   color: #fff;
-  min-width: 14rem;
+  width: 14rem;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
 }
 .btn-custom--primary__color {
   background-color: var(--primary-color);
@@ -91,6 +95,11 @@ a {
 .btn-custom img {
   width: 1.7rem;
   height: 1.7rem;
+}
+.btn-custom > span {
+  font-size: 1.3rem;
+  line-height: 1.9rem;
+  padding: 0 0.3rem;
 }
 .content__table {
   height: 54rem;
@@ -283,6 +292,11 @@ thead tr {
 .report__button {
   padding-top: 7rem;
   padding-bottom: 3rem;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
 }
 .report__table {
   max-height: 61rem;
@@ -334,9 +348,9 @@ thead tr {
   transition: 0.3s ease all;
 }
 .round__btn--center:hover {
-  background-color: var(--primary-color) !important;
+  background-color: var(--secondary-color) !important;
   color: #fff !important;
-  border-color: var(--primary-color);
+  border-color: var(--secondary-color);
 }
 .pl-1rem {
   padding-left: 2.5rem;
