--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -84,17 +84,20 @@ font-size: 20px;
    background-color: inherit ;
   }
   .first{
-  	top:25%;
-left:21%;
+  	top:23%;
+left:22%;
+position: absolute;
 margin-left: 2px;
   }
 .second{
-top:25%;
-left:46%;
+top:23%;
+left:47%;
+position: absolute;
 }
 .third{
-top:25%;
-right:20%;
+top:23%;
+right:21%;
+position: absolute;
 }
 .circle:hover{
 	background-color: #46C0D2;
@@ -165,4 +168,45 @@ a.active.pag{
 background-color: #086799;
 color:white;
 
+}
+.des{
+	color:#2D4761; font-size: 13px;font-weight:bold; line-height: 19px;	
+}
+.chosing{
+	background-color: #46C0D2; border:none; width:125px; height:36px;border-radius:4px ;
+}
+.changeBG{
+	background-color:  #F3F9FF;
+}
+.keepbackground{
+	background-color: white;
+}
+tr.keepbackground td, tr.changeBG td{
+	border-right: 1px solid #D9E7F4;
+	height:60px;
+}
+table.table{
+	border: 1px solid #7C97B1;
+	text-overflow:ellipsis;
+	 overflow: scroll;
+	width: 90%;
+	height:720px!important;
+}
+table{
+	overflow:scroll;
+}
+.circle2{
+	height:120px;
+	width:120px;
+	border-radius: 50%;
+	border:none;
+	color: #46C0D2;
+	background-color: #46C0D2;
+}
+.circle2 :hover {
+background-color: #086799;
+}
+button.x{
+	width:125px;
+	height:36px;
 }
